--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.io/KevinMisati/expense-tracke",
+  "homepage": "https://kevinmisati.github.io/expense-tracke/",
   "name": "tmdba",
   "version": "0.1.0",
   "private": true,
